fixed scrollbar

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -281,3 +281,16 @@ ruby rt {
     bottom: 10vh;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+  background: rgba(42, 42, 42, 0.5);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(92, 92, 92, 0.5);
+  border-radius: 5px;
+  box-shadow: 0 0 1px black inset;
+}
